--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>TechForge Club<span>.</span></h1>
-          <h2>Technology, Forged with Creativity</h2>
+          <h1>TechForge <span>Club</span></h1>
+          <h2>Technology, Forged with Creativity!</h2>
         </div>
       </div>
 
