updated sql website

--- a/sql/walkthrough.html
+++ b/sql/walkthrough.html
@@ -71,7 +71,7 @@
 </head>
 
 <body>
-    <nav id="navbar-product-top" class="navbar navbar-dark">
+<!--    <nav id="navbar-product-top" class="navbar navbar-dark">
         <ul>
             <li class="logo">
                 <a href="http://knightlab.com">
@@ -101,7 +101,7 @@
 
         </ul>
     </nav>
-
+-->
     <header class="header-product">
         <h1 class="product-logo product-logo-large">
             SQL Murder Mystery
@@ -125,9 +125,7 @@
             <div class="grid-item">
                 <h2>Walkthrough for SQL Beginners</h2>
                 <p>
-                    If you're comfortable with SQL, you can <a href="index.html#experienced">skip these explanations</a> and put your skills to the test! Below we introduce some basic SQL concepts, and just enough detail to solve the murder. If you'd
-                    like a more complete introduction to SQL, try <a href="https://selectstarsql.com/">Select
-            Star SQL.</a>
+                    If you're comfortable with SQL, you can <a href="index.html#experienced">skip these explanations</a> and put your skills to the test! Below we introduce some basic SQL concepts, and just enough detail to solve the murder.
                 </p>
             </div>
         </div>
@@ -455,7 +453,7 @@ SELECT value FROM solution;"></sql-exercise>
 
             </div>
         </div>
-
+<!--
         <div id="credits" class="grid">
             <div class="grid-item">
                 <h3>Credits</h3>
@@ -533,7 +531,7 @@ SELECT value FROM solution;"></sql-exercise>
             </div>
         </div>
     </footer>
-
+-->
     <script src="https://cdn.knightlab.com/libs/orangeline/0.1.1/js/orangeline.js"></script>
 
 </body>
