--- a/sql/index.html
+++ b/sql/index.html
@@ -69,7 +69,7 @@
 </script>
     <title>The SQL Murder Mystery</title>
 </head>
-
+<!--
 <body>
     <nav id="navbar-product-top" class="navbar navbar-dark">
         <ul>
@@ -101,7 +101,7 @@
 
         </ul>
     </nav>
-
+-->
     <header class="header-product">
         <h1 class="product-logo product-logo-large">
             SQL Murder Mystery
@@ -124,9 +124,7 @@
             <div class="grid-item">
                 <h2>New to SQL?</h2>
                 <p>
-                    This exercise is meant more as a way to practice SQL skills than a full tutorial. If you've never used SQL at all, <a href="walkthrough.html">try the walkthrough</a>. If you really want to learn a lot about SQL, you may prefer a complete
-                    tutorial like <a href="https://selectstarsql.com/">Select Star SQL.</a>
-
+                    This exercise is meant more as a way to practice SQL skills than a full tutorial.
                 </p>
                 <p>If you're comfortable with SQL, you can <a href="#experienced">dive in below</a>!</p>
             </div>
@@ -202,7 +200,7 @@
             </div>
         </div>
 
-        <div id="credits" class="grid">
+<!--        <div id="credits" class="grid">
             <div class="grid-item">
                 <h3>Credits</h3>
                 <p>The SQL Murder Mystery was created by <a href="https://twitter.com/joonparkmusic">Joon Park</a> and <a href="https://twitter.com/Cathy_MeiyingHe">Cathy He</a> while they were Knight Lab fellows. See the <a href="https://github.com/NUKnightLab/sql-mysteries">GitHub repository</a>                    for more information.</p>
@@ -279,7 +277,7 @@
             </div>
         </div>
     </footer>
-
+-->
     <script src="https://cdn.knightlab.com/libs/orangeline/0.1.1/js/orangeline.js"></script>
     <script type="text/javascript">
         document.querySelector('#show-schema').addEventListener('click', function() {
