--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/logo.png" rel="apple-touch-icon">
+  <link href="assets/img/logo1.png" rel="icon">
+  <link href="assets/img/logo1.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -38,7 +38,7 @@
 
       <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>TechForge</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/TechForge_Logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -181,7 +181,7 @@ By pursuing these aims, the Tech Forge Club seeks to create an environment where
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="image col-lg-6" style='background-image: url("assets/img/logo.png') data-aos="fade-right"></div>
+          <div class="image col-lg-6" style='background-image: url("assets/img/TechForge_Logo.png') data-aos="fade-right"></div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <p><b>Motto: Tech, Forged with Creativity</b>
 <br><br>
@@ -628,7 +628,7 @@ By pursuing these aims, the Tech Forge Club seeks to create an environment where
         </div>
 
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d967.9694018931851!2d75.5774446579614!3d13.965890000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbbaede306e28fb%3A0xe9e81cf897ac959d!2sXH8H%2B849%20Library%2C%20JNNCE%2C%20Navule%2C%20Navule%2C%20Shivamogga%2C%20Karnataka%20577204!5e0!3m2!1sen!2sin!4v1698089088225!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3871.900155504998!2d75.57654607509413!3d13.964548286449896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbbaf6645324731%3A0xf63947344c8e02d3!2sTechForge%20Club%20JNNCE!5e0!3m2!1sen!2sin!4v1719679273823!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
 
@@ -651,7 +651,7 @@ By pursuing these aims, the Tech Forge Club seeks to create an environment where
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91-8197599451</p>
+                <p>+91-7353474625</p>
               </div>
 
             </div>
@@ -700,7 +700,7 @@ By pursuing these aims, the Tech Forge Club seeks to create an environment where
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>TechForge<span>.</span></h3>
+              <h3>TechForge<span>Club</span></h3>
               <p>
                 Technology, Forged with Creativity<br><br>
                 <strong>Phone:</strong>+91-8197599451<br>
